# Codename.TheBsGame

./: README.md  asset-manifest.json  index.html  manifest.json
.github/workflows/: client_PullRequest_Push.yml  server-push-master.yml
client/: .env  .env.development  .env.production  .env.test  .eslintignore  .eslintrc  .prettierrc  config-overrides.js  package-lock.json  package.json  tsconfig.json
client/public/: index.html
client/src/: index.tsx  react-app-env.d.ts
client/src/containers/: index.tsx
client/src/game/: gameRenderer.ts  gameWorld.ts  index.ts  worldEnviroment.ts
client/src/infrastructure/: compareHelper.ts  logger.ts
client/src/styles/: index.scss
server/: Cargo.toml  Dockerfile  Dockerrun.aws.json  obsolete_Dockerfile  readme.md
server/game_logic/: Cargo.toml
server/game_logic/src/: game_state.rs  lib.rs  schedule.rs
server/game_logic/src/commands/: game_command.rs  mod.rs
server/game_logic/src/components/: destination.rs  mod.rs  position.rs  velocity.rs
server/game_logic/src/resources/: mod.rs  time_resource.rs
server/game_logic/src/systems/: destination_to_velocity.rs  handle_commands.rs  mod.rs  remove_destination_on_arrival.rs  velocity_to_position.rs
server/server/: Cargo.toml
server/server/src/: handler.rs  main.rs  ws.rs
server/src/: handler.rs  main.rs  ws.rs
server/src/game/: game_state.rs  mod.rs  schedule.rs
server/src/game/commands/: game_command.rs  mod.rs
server/src/game/components/: mod.rs  position.rs  unit_id.rs  velocity.rs
server/src/game/resources/: mod.rs  time_resource.rs
server/src/game/systems/: destination_to_velocity.rs  handle_commands.rs  mod.rs  print_position.rs  remove_destination_on_arrival.rs  velocity_to_position.rs
server/wasm/: Cargo.toml
server/wasm/src/: lib.rs
src/client/: package.json
src/client/public/: manifest.json
src/client/src/: .env.development  index.tsx  (+1 more)
static/css/: main.a9d6424a.chunk.css  main.a9d6424a.chunk.css.map  main.e69f694c.chunk.css  main.e69f694c.chunk.css.map
static/js/: 2.1e8b4e8b.chunk.js  2.1e8b4e8b.chunk.js.map  2.422e2903.chunk.js  2.422e2903.chunk.js.map  main.01ed01e4.chunk.js  main.01ed01e4.chunk.js.map  main.03239393.chunk.js  main.03239393.chunk.js.map  main.c6092017.chunk.js  main.c6092017.chunk.js.map  main.d767c761.chunk.js  main.d767c761.chunk.js.map  runtime-main.2ad42463.js  runtime-main.2ad42463.js.map
(+35 files in other folders)
