[package]
name = "learnwebsocket"
version = "0.1.0"
edition = "2018"

[dependencies]
# Used to enabled Async in Rust
tokio = { version = "0.2", features = ["macros", "sync"] }
# Web-framework that implements Websockets (and more)
warp = "0.2"
# serilization/deserilization Framework
serde = { version = "1.0", features = ["derive"] }
# Enables json serilization/deserilization
serde_json = "1.0"
# Futures are used when dealing with async (tokio) (think of promises from js)
futures = { version = "0.3" }
# Genereates unique ids
uuid = { version = "0.4", features = ["serde", "v4"] }
# Entity Component system, used for the game loop
legion = "0.4.0"
