[package]
name = "game_logic"
version = "0.1.0"
edition = "2018"

[lib]
name = "game_logic"

[features]
wasm-bindgen = ["legion/wasm-bindgen"]

[dependencies]
# Entity Component system, used for the game loop
legion ={ version= "0.4", default-features = false, features=["codegen"]}
# For 2d math
vector2d = "2.2"
# serilization/deserilization Framework
serde = { version = "1.0", features = ["derive"] }
